--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,16 +1,9 @@
-<% if Helpers.is_logged_in?(session) %>
-<%= @error %>
-  <form action='/tweets' method="post">
-    Content:
-    <input type="text" name="content"><br>
-    Create Your Tweet:
+<h1>Create a Tweet</h1>
 
-    <input type="submit" name="submit" id="submit">
+<form action="/tweets" method="POST">
+<label for="content">Content</label>
+<input id="content" name="content">
 
-    <input type="submit" name="submit">
+<input type="submit" value="submit">
 
-  </form>
-
-  <% else %>
-      <h1> You Must Be Logged in to Make Tweets </h1>
-  <% end %>
+</form>
